# dev

./: Agent.md  Cargo.toml  README.md  braindb-config.yaml
crates/db3-adapter/: Cargo.toml
crates/db3-adapter/src/: lib.rs
crates/helix-cli/: Cargo.toml
crates/helix-cli/src/: main.rs
crates/helix-db/: Cargo.toml
crates/helix-db/src/: auth.rs  config.rs  document.rs  error.rs  graph.rs  helixql.rs  lib.rs  metrics.rs  plugin.rs  server.rs  storage.rs  telemetry.rs  vector.rs
crates/helix-macros/: Cargo.toml
crates/helix-macros/src/: lib.rs
crates/maid-apikeys/: Cargo.toml
crates/maid-apikeys/src/: config.rs  db.rs  http.rs  main.rs  security.rs
crates/maid-core/: Cargo.toml
crates/maid-core/src/: api.rs  auth.rs  config.rs  main.rs  metrics.rs  persistence.rs  plugin.rs  runner.rs
crates/maid-mistral/: Cargo.toml
crates/maid-mistral/src/: main.rs
crates/pgml-adapter/: Cargo.toml
crates/pgml-adapter/src/: lib.rs
docs/: api.md  apikeys-api.md  architecture.md  cli.md  configuration.md  core-api.md  deployment.md  mistral.md  monitoring.md  overview.md  security.md  workflows.md
templates/: report.html
