[workspace]
members = [
    "crates/helix-db",
    "crates/helix-cli",
    "crates/helix-macros",
    "crates/pgml-adapter",
    "crates/db3-adapter"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Codex AI Engineering Team <engineering@codex.ai>"]
description = "HelixDB (BrainDB) ecosystem workspace"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "http1", "http2", "json", "ws"] }
bincode = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
ed25519-dalek = { version = "2", features = ["std"] }
flume = "0.11"
futures = "0.3"
heed = { version = "0.14", features = ["lmdb"] }
hex = "0.4"
hyper = { version = "1", features = ["full"] }
jsonwebtoken = "9"
lapin = "2"
lazy_static = "1"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
metrics-util = "0.15"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
num-traits = "0.2"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
utoipa = { version = "4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
