[package]
name = "helix-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "HelixDB command-line interface"

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
dirs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
helix-db = { path = "../helix-db" }
tokio = { workspace = true, features = ["full"] }

[features]
default = []
