[package]
name = "helix-db"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "HelixDB core graph+vector database"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bincode.workspace = true
bytes.workspace = true
config.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
flume.workspace = true
futures.workspace = true
heed.workspace = true
hex.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
once_cell.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
validator.workspace = true
chrono.workspace = true
uuid.workspace = true
helix-macros = { path = "../helix-macros" }

[features]
default = ["graph", "vector", "fts", "mcp"]
graph = []
vector = []
fts = []
mcp = []

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
