[package]
name = "maid-mistral"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
axum.workspace = true
chrono.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
schemars.workspace = true
